Refactorizacion HTML + SEO

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "homepage": "https://github.com/BrunoChiappetta/solcasteran#readme",
   "scripts": {
     "build:sass": "sass  --no-source-map src/scss:build/css",
-    "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy:html": "copyfiles -u 1 \"src/*.html\" public",
     "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
-    "copy:js": "copyfiles -u 1 ./src/js/* public",
+    "copy:js": "copyfiles -u 1 \"src/javascript/**\" public",
     "copy": "npm-run-all --parallel copy:*",
-    "watch:html": "onchange \"src/*.html'\" -- npm run copy:html",
-    "watch:assets": "onchange \"/src/assets/**/*\" -- npm run copy:html",
-    "watch:js": "onchange \"/src/js/*\" -- npm run copy:html",
+    "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+    "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:assets",
+    "watch:js": "onchange \"src/javascript/**\" -- npm run copy:js",
     "watch:sass": "sass  --no-source-map --watch src/scss:public/css",
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public",
